[gd_scene load_steps=17 format=3 uid="uid://btl27tf157rs5"]

[ext_resource type="Script" path="res://tower/tower.gd" id="1_lgnhb"]
[ext_resource type="Script" path="res://tower/building_manager.gd" id="2_qc6mu"]
[ext_resource type="Script" path="res://tower/building.gd" id="3_51hqr"]
[ext_resource type="TileSet" uid="uid://drgq806ewpsqf" path="res://tower/tower-tileset.tres" id="4_7rioh"]
[ext_resource type="Texture2D" uid="uid://b8tbbb5ghnrdc" path="res://tower/env.png" id="5_d4aqq"]
[ext_resource type="Texture2D" uid="uid://dulfajv008h22" path="res://tower/place_anim.png" id="6_40vxl"]
[ext_resource type="Script" path="res://tower/PlaceAnim.gd" id="7_c5f04"]
[ext_resource type="Script" path="res://tower/AnimationPlayerPlace.gd" id="8_02prm"]
[ext_resource type="Script" path="res://tower/PlaceAnimRight.gd" id="9_jbrgu"]
[ext_resource type="Script" path="res://tower/PlaceAnimRightAnim.gd" id="10_sshgv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wh8in"]
texture = ExtResource("5_d4aqq")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0

[sub_resource type="TileSet" id="TileSet_jpqya"]
sources/0 = SubResource("TileSetAtlasSource_wh8in")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_spkyq"]
load_path = "res://.godot/imported/place_anim.png-062d69ce06551ce6d821c0ec615ca48c.ctex"

[sub_resource type="Animation" id="Animation_52lni"]
length = 0.576
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceAnimRight:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CompressedTexture2D_spkyq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlaceAnimRight:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlaceAnimRight:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlaceAnimRight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlaceAnimRight:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.048, 0.096, 0.144, 0.192, 0.24, 0.288, 0.336, 0.384, 0.432, 0.48, 0.528),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlaceAnimLeft:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_40vxl")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlaceAnimLeft:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlaceAnimLeft:vframes")
tracks/7/interp = 1
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlaceAnimLeft:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = false
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PlaceAnimLeft:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = false
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.048, 0.096, 0.144, 0.192, 0.24, 0.288, 0.336, 0.384, 0.432, 0.48, 0.528),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_va6q7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlaceAnimLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7i4cq"]
_data = {
"RESET": SubResource("Animation_va6q7"),
"default": SubResource("Animation_52lni")
}

[node name="tower" type="Node2D" node_paths=PackedStringArray("tileMap")]
script = ExtResource("1_lgnhb")
tileMap = NodePath("BuildingManager/TowerMap")

[node name="GroundMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jpqya")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 12, 0, 1, 11, 0, 1, 10, 196608, 0, 9, 131072, 0, 8, 131072, 0, 7, 131072, 0, 6, 196608, 0, 65531, 0, 1, 65530, 0, 1, 65529, 196608, 0, 65528, 131072, 0, 65527, 131072, 0, 65526, 131072, 0, 65525, 196608, 0, 65524, 0, 1, 65523, 0, 1, 131059, 65536, 1, 196595, 131072, 1, 262131, 65536, 1, 327667, 65536, 1, 393203, 131072, 1, 458739, 65536, 1, 65548, 65536, 1, 131084, 131072, 1, 196620, 65536, 1, 262156, 65536, 1, 327692, 131072, 1, 393228, 65536, 1, 524275, 65536, 1, 458764, 65536, 1, 458763, 65536, 1, 458762, 65536, 1, 458761, 65536, 1, 458760, 65536, 1, 458759, 65536, 1, 458758, 65536, 1, 458757, 65536, 1, 458756, 65536, 1, 458755, 65536, 1, 458754, 65536, 1, 458753, 65536, 1, 458752, 65536, 1, 524287, 65536, 1, 524286, 65536, 1, 524285, 65536, 1, 524284, 65536, 1, 524283, 65536, 1, 524282, 65536, 1, 524281, 65536, 1, 524280, 65536, 1, 524279, 65536, 1, 524278, 65536, 1, 524277, 65536, 1, 524276, 65536, 1, 458742, 65536, 1, 393206, 131072, 1, 327670, 65536, 1, 262134, 65536, 1, 196598, 131072, 1, 131062, 65536, 1, 131061, 65536, 1, 131060, 65536, 1, 196596, 131072, 1, 262132, 65536, 1, 327668, 65536, 1, 393204, 131072, 1, 458740, 65536, 1, 458741, 65536, 1, 393205, 131072, 1, 327669, 65536, 1, 262133, 65536, 1, 196597, 131072, 1, 131063, 65536, 1, 196599, 131072, 1, 262135, 65536, 1, 327671, 65536, 1, 393207, 131072, 1, 458743, 65536, 1, 458744, 65536, 1, 393208, 131072, 1, 327672, 65536, 1, 262136, 65536, 1, 196600, 131072, 1, 131064, 65536, 1, 131065, 65536, 1, 196601, 131072, 1, 262137, 65536, 1, 327673, 65536, 1, 393209, 131072, 1, 458745, 65536, 1, 458746, 65536, 1, 393210, 131072, 1, 327674, 65536, 1, 262138, 65536, 1, 196602, 131072, 1, 131066, 65536, 1, 131067, 65536, 1, 196603, 131072, 1, 262139, 65536, 1, 327675, 65536, 1, 393211, 131072, 1, 458747, 65536, 1, 458748, 65536, 1, 393212, 131072, 1, 327676, 65536, 1, 262140, 65536, 1, 196604, 131072, 1, 131068, 65536, 1, 131069, 65536, 1, 196605, 131072, 1, 262141, 65536, 1, 327677, 65536, 1, 393213, 131072, 1, 458749, 65536, 1, 458750, 65536, 1, 393214, 131072, 1, 327678, 65536, 1, 262142, 65536, 1, 196606, 131072, 1, 131070, 65536, 1, 131071, 65536, 1, 196607, 131072, 1, 262143, 65536, 1, 327679, 65536, 1, 393215, 131072, 1, 458751, 65536, 1, 393216, 65536, 1, 327680, 131072, 1, 262144, 65536, 1, 196608, 65536, 1, 131072, 131072, 1, 65536, 65536, 1, 65537, 65536, 1, 131073, 131072, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 131072, 1, 393217, 65536, 1, 393218, 65536, 1, 327682, 131072, 1, 262146, 65536, 1, 196610, 65536, 1, 131074, 131072, 1, 65538, 65536, 1, 65539, 65536, 1, 131075, 131072, 1, 196611, 65536, 1, 262147, 65536, 1, 327683, 131072, 1, 393219, 65536, 1, 393220, 65536, 1, 327684, 131072, 1, 262148, 65536, 1, 196612, 65536, 1, 131076, 131072, 1, 65540, 65536, 1, 65541, 65536, 1, 131077, 131072, 1, 196613, 65536, 1, 262149, 65536, 1, 327685, 131072, 1, 393221, 65536, 1, 393222, 65536, 1, 327686, 131072, 1, 262150, 65536, 1, 196614, 65536, 1, 131078, 131072, 1, 65542, 65536, 1, 65543, 65536, 1, 131079, 131072, 1, 196615, 65536, 1, 262151, 65536, 1, 327687, 131072, 1, 393223, 65536, 1, 393224, 65536, 1, 327688, 131072, 1, 262152, 65536, 1, 196616, 65536, 1, 131080, 131072, 1, 65544, 65536, 1, 65545, 65536, 1, 131081, 131072, 1, 196617, 65536, 1, 262153, 65536, 1, 327689, 131072, 1, 393225, 65536, 1, 393226, 65536, 1, 327690, 131072, 1, 262154, 65536, 1, 196618, 65536, 1, 131082, 131072, 1, 65546, 65536, 1, 65547, 65536, 1, 131083, 131072, 1, 196619, 65536, 1, 262155, 65536, 1, 327691, 131072, 1, 393227, 65536, 1)

[node name="BuildingManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_qc6mu")

[node name="Building" type="Node" parent="BuildingManager"]
script = ExtResource("3_51hqr")

[node name="TowerMap" type="TileMap" parent="BuildingManager"]
tile_set = ExtResource("4_7rioh")
format = 2
layer_0/name = "Building"
layer_1/name = "Decoration"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="PreviewMap" type="TileMap" parent="BuildingManager"]
tile_set = ExtResource("4_7rioh")
format = 2
layer_0/name = "Building"
layer_1/name = "Decoration"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="PlaceAnimLeft" type="Sprite2D" parent="BuildingManager"]
texture_filter = 1
position = Vector2(-8, 0)
texture = ExtResource("6_40vxl")
hframes = 4
vframes = 4
script = ExtResource("7_c5f04")
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "BuildingManager/PlaceAnimLeft/PlaceAnim",
"source": "res://tower/place_anim.aseprite"
}

[node name="PlaceAnim" type="AnimationPlayer" parent="BuildingManager/PlaceAnimLeft"]
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_7i4cq")
}
script = ExtResource("8_02prm")

[node name="PlaceAnimRight" type="Sprite2D" parent="BuildingManager"]
texture_filter = 1
position = Vector2(8, 0)
texture = SubResource("CompressedTexture2D_spkyq")
hframes = 4
vframes = 4
script = ExtResource("9_jbrgu")
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "BuildingManager/PlaceAnimRight/PlaceAnim",
"source": "res://tower/place_anim.aseprite"
}

[node name="PlaceAnim" type="AnimationPlayer" parent="BuildingManager/PlaceAnimRight"]
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_7i4cq")
}
script = ExtResource("10_sshgv")

[connection signal="building_placed" from="BuildingManager" to="." method="_on_building_manager_building_placed"]
